@@ -4,7 +4,7 @@ this a very little description what you have to do to make Gallery >=1.4.3 work 
 
 - Fresh phpBB2 installlation
 
-- unzip modules.php.gz and upload modules.php into phpBB2/
+- upload modules.php into phpBB2/
 
 - create phpBB2/modules folder
 
