@@ -1,3 +1,11 @@
+2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b8
+
+	* Fix: Extract HTTP_POST_FILES in phpBB2's modules.php
+
+	* Change: Remove modules.php.gz, add modules.php so that we can track
+	  code changes.  There's no real reason for it to be gzip'ed.
+	  - Updated HowTo.txt and removed 'unzip'...
+
 2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b7
 
 	* Fix: Correct the check_exec function which was being a little too liberal
